# wg-scripts

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  Pipfile  README.md  main.py  pyproject.toml  requirements.txt  sonar-project.properties  wg-scripts
_archive/datapi/pia_check/: main.py
_archive/flmtpi/dehumidifier_control/: main.py
_archive/octopi/dht22_temp_humid/: main.py
all_pis/fan_controller/: fan_controller.service  install.sh  main.py
all_pis/pi_stats/: Makefile  install.sh  main.py  pi_stats.service
all_pis/raspi_stats/: main.py
background/: mon_src.py  raspi_stats_infinite.py
background/flmtpi/filament_cabinet_monitor/: dht22.py  main.py
climate_monitor/: climate_monitor.service
clmtpi/climate_monitor/: climate_monitor.service  install.sh  main.py
cron/: dht22_temp_humid.py  freecycle_scraper.py  google_calendar_copier.py  hass_db_backup.py  hass_db_cleanup.sql  hass_status_check.py  pia_check.py  raspi_stats.py  serveo_status_check.py
datapi/pia_check/: UK London.conf
dht22_mqtt_sensor/: dht22_mqtt_sensor.service  main.py
ec2/: freecycle_scraper.py  google_calendar_copier.py  spotify_api.py
flmtpi/climate_monitor/: Makefile  main.py
flmtpi/dehumidifier_control/: main.py
flmtpi/dehumidifier_controller/: Makefile  dehumidifier_controller.service  main.py
flmtpi/filament_cabinet_monitor/: main.py
lib/: __init__.py
lib/home_assistant/: update_hass.py
lib/monitor_controls/: mon_pow.py  mon_src.py
lib/octoprint/: octoprint_to_youtube.py
lib/pia/: pia_check.py
macbook/: hass_webhooks.py
mqtt_gpio/: README.md  main.py  mqtt_gpio.service
octopi/dht22_temp_humid/: main.py
octopi/enclosure_fan_control/: main.py
octopi/enclosure_fan_controller/: enclosure_fan_controller.service  install.sh  main.py
octopi/enclosure_monitor/: enclosure_monitor.service  install.sh  main.py
octopi/fan_controller/: fan_controller.service  main.py
pi_stats/: main.py  pi_stats.service
scripts/: __init__.py
scripts/home_assistant/: update_hass.py
scripts/octoprint/: octoprint_to_youtube.py
scripts/pia/: pia_check.py
services/climate_monitor/: climate_monitor.service  main.py
services/dht22_mqtt_sensor/: dht22_mqtt_sensor.service  main.py
services/mqtt_gpio/: main.py  mqtt_gpio.service
services/pi_stats/: README.md  main.py  pi_stats.service
src/services/climate_monitor/: climate_monitor.service  main.py
src/services/dht22_mqtt_sensor/: README.md  dht22_mqtt_sensor.service  main.py
src/services/mqtt_gpio/: main.py  mqtt_gpio.service
src/services/pi_stats/: main.py  pi_stats.service
utilities/: dht22_lib.py
utils/: __init__.py  const.py  mqtt.py
